force-app/main/default/objects/Matricula__c/Matricula__c.object-meta.xml
<CustomObject>
    <label>Matrícula</label>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Nombre de Matrícula</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrículas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>