force-app/main/default/objects/Matricula__c/fields/Efector__c.field-meta.xml
<CustomField>
    <fullName>Efector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matrículas</relationshipLabel>
    <relationshipName>Matriculas</relationshipName>
    <type>Lookup</type>
</CustomField>