force-app/main/default/objects/Matricula__c/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <label>Matrícula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>