force-app/main/default/objects/Matricula__c/fields/Provincia_codigo__c.field-meta.xml
<CustomField>
    <fullName>Provincia_codigo__c</fullName>
    <label>Provincia código</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincia</valueSetName>
    </valueSet>
</CustomField>