force-app/main/default/objects/Matricula__c/fields/Provincia_nombre__c.field-meta.xml
<CustomField>
    <fullName>Provincia_nombre__c</fullName>
    <description>Nombre de provincia usado solo para el componente EfectorSearch</description>
    <label>Provincia nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>