force-app/main/default/objects/Matricula__c/fields/Tipo_de_Matricula__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Matricula__c</fullName>
    <label>Tipo de Matrícula</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <label>Provincial</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Nacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>